--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,6 @@
     color: #398439;
     font-size: 30px;
     font-weight:bold;
-    font-family: Vijaya;
 }
 
 .table {
@@ -103,4 +102,8 @@ option{
 #drop_downs {
     margin-top:30px;
     margin-bottom: 30px;
+}
+
+#video, #buttonbar {
+    margin-left: 200px;
 }
