--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,17 @@
-
+html {
+    min-height:100%;
+    overflow-x:hidden;
+    overflow-y:scroll;
+    position:relative;
+    width:100%;
+}
+body {
+    color:#000;
+    font-weight:100;
+    margin:0;
+    min-height:100%;
+    width:100%;
+}
 
 .container {
     margin-left:0;
