--- a/style/style.css
+++ b/style/style.css
@@ -11,21 +11,23 @@ body {
     margin:0;
     min-height:100%;
     width:100%;
-    background-color: #3b5998;
+    background-color: #6990e1;
 
 }
 
 .container {
-    margin-left:0;
-    margin-right:0;
+    margin:0;
 }
 
 .navbar{
+    margin:0;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 9999;
-    width: 100%;
+    border-color: black;
+    border-right: none;
+    border-top: none;
 
 
 }
@@ -133,7 +135,7 @@ body {
     display:block;
 }
 .dropdown dd ul li a:hover {
-    background-color:#245580 ;
+    background-color:#6990e1 ;
 }
 
 select, .dropdown {
@@ -163,7 +165,7 @@ select, .dropdown {
 }
 
 .container{
-    background-color: #3b5998;
+    background-color: #6990e1;
 }
 
 option{
