--- a/style/style.css
+++ b/style/style.css
@@ -11,11 +11,10 @@ body {
     margin:0;
     width:100%;
     background-color: #3f5c9a;
-    min-height:540px;
+    min-height:100%;
+    
 }
 
-body[orient="portrait"] { min-height:540px; }
-body[orient="landscape"] { min-height:400px; }
 
 #home {
     background-color: #3f5c9a;
